v1.1.0/modules/schema/pages/class/ProductBid.adoc
= `ProductBid`
:toclevels: 4


+++Component of a bid that pertains to one market product.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ProductBid`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`ProductBid`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Bid,`Bid`>>
//| [[slots_table.Bid]]<<Bid,`Bid`>>
| 1 +
xref::class/Bid.adoc[`Bid`]
| +++A bid comprises one or more product bids of market products+++
| _n/a_

| <<BidDistributionFactor,`BidDistributionFactor`>>
//| [[slots_table.BidDistributionFactor]]<<BidDistributionFactor,`BidDistributionFactor`>>
| 0..* +
xref::class/BidDistributionFactor.adoc[`BidDistributionFactor`]
| _n/a_
| _n/a_

| <<BidHourlyProductSchedule,`BidHourlyProductSchedule`>>
//| [[slots_table.BidHourlyProductSchedule]]<<BidHourlyProductSchedule,`BidHourlyProductSchedule`>>
| 0..* +
xref::class/BidHourlyProductSchedule.adoc[`BidHourlyProductSchedule`]
| _n/a_
| _n/a_

| <<BidSchedule,`BidSchedule`>>
//| [[slots_table.BidSchedule]]<<BidSchedule,`BidSchedule`>>
| 0..* +
xref::class/BidPriceSchedule.adoc[`BidPriceSchedule`]
| _n/a_
| _n/a_

| <<BidSelfSched,`BidSelfSched`>>
//| [[slots_table.BidSelfSched]]<<BidSelfSched,`BidSelfSched`>>
| 0..* +
xref::class/BidSelfSched.adoc[`BidSelfSched`]
| _n/a_
| _n/a_

| <<MarketProduct,`MarketProduct`>>
//| [[slots_table.MarketProduct]]<<MarketProduct,`MarketProduct`>>
| 1 +
xref::class/MarketProduct.adoc[`MarketProduct`]
| _n/a_
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Bid]
=== `Bid`
+++A bid comprises one or more product bids of market products+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ProductBid.Bid`
| Cardinality
| 1
| Type
| xref::class/Bid.adoc[`Bid`]


|===

////
[.text-left]
--
<<slots_table.Bid,&#10548;>>
--
////


//[discrete]
[#BidDistributionFactor]
=== `BidDistributionFactor`



[cols="h,4",width=65%]
|===
| URI
| `cim:ProductBid.BidDistributionFactor`
| Cardinality
| 0..*
| Type
| xref::class/BidDistributionFactor.adoc[`BidDistributionFactor`]


|===

////
[.text-left]
--
<<slots_table.BidDistributionFactor,&#10548;>>
--
////


//[discrete]
[#BidHourlyProductSchedule]
=== `BidHourlyProductSchedule`



[cols="h,4",width=65%]
|===
| URI
| `cim:ProductBid.BidHourlyProductSchedule`
| Cardinality
| 0..*
| Type
| xref::class/BidHourlyProductSchedule.adoc[`BidHourlyProductSchedule`]


|===

////
[.text-left]
--
<<slots_table.BidHourlyProductSchedule,&#10548;>>
--
////


//[discrete]
[#BidSchedule]
=== `BidSchedule`



[cols="h,4",width=65%]
|===
| URI
| `cim:ProductBid.BidSchedule`
| Cardinality
| 0..*
| Type
| xref::class/BidPriceSchedule.adoc[`BidPriceSchedule`]


|===

////
[.text-left]
--
<<slots_table.BidSchedule,&#10548;>>
--
////


//[discrete]
[#BidSelfSched]
=== `BidSelfSched`



[cols="h,4",width=65%]
|===
| URI
| `cim:ProductBid.BidSelfSched`
| Cardinality
| 0..*
| Type
| xref::class/BidSelfSched.adoc[`BidSelfSched`]


|===

////
[.text-left]
--
<<slots_table.BidSelfSched,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#MarketProduct]
=== `MarketProduct`



[cols="h,4",width=65%]
|===
| URI
| `cim:ProductBid.MarketProduct`
| Cardinality
| 1
| Type
| xref::class/MarketProduct.adoc[`MarketProduct`]


|===

////
[.text-left]
--
<<slots_table.MarketProduct,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Bid.adoc[`Bid`] | xref::class/Bid.adoc#ProductBids[`ProductBids`]



| xref::class/BidDistributionFactor.adoc[`BidDistributionFactor`] | xref::class/BidDistributionFactor.adoc#ProductBid[`ProductBid`]



| xref::class/BidHourlyProductSchedule.adoc[`BidHourlyProductSchedule`] | xref::class/BidHourlyProductSchedule.adoc#ProductBid[`ProductBid`]



| xref::class/BidPriceSchedule.adoc[`BidPriceSchedule`] | xref::class/BidPriceSchedule.adoc#ProductBid[`ProductBid`]



| xref::class/BidSelfSched.adoc[`BidSelfSched`] | xref::class/BidSelfSched.adoc#ProductBid[`ProductBid`]



| xref::class/MarketProduct.adoc[`MarketProduct`] | xref::class/MarketProduct.adoc#ProductBids[`ProductBids`]


|===

